Use periods
