# api/v1/openapi.yaml
@@ -1,17 +1,17 @@
 info:
-  title: 'Gloo Platform Portal API'
+  title: 'Gloo Platform Portal IDP Connect API'
   version: 1.0.0
-  description: Gloo Platform Portal Self Service Credential Management API
+  description: Before you begin, set up Gloo Platform Portal with your OpenID Connect (OIDC) provider. Then, IDP Connect API, you can manage the clients and scopes in your OIDC provider that get associated with your Portal apps. For more information, see the [Gloo Platform Portal docs](https://docs.solo.io/gloo-portal/latest/).
 openapi: 3.0.0
 servers:
   - url: https://api.gloo-platform-portal.com/v1
 paths:
   /clients:
     post:
-      description: Creates a client in the Open Id Connect Provider that the SPI (Server Provider Interface) implementation integrates with.  `glooPortalUser` and `glooPortalTeam` are optional parameters that will link the `clientId` returned with the user/team id if it is provided. In addition, if `clientMetadata` is returned, it will be stored as a json string in the database in case additional client metadata is needed in future requests to get, update, or delete the client. The `clientSecret` is never stored in the database and will only be shown to the user once.
+      description: Creates a client in the Open Id Connect Provider that the IDP Connect implementation integrates with. Note that the `clientSecret` is never stored in the database and is shown to the user only once. Keep this secret to make future requests to the API products in the Portal. Identity token is required to validate that the user is associated with the given client.
       operationId: CreateClient
       requestBody:
-        description: (Required) clientName for creating name of the client. `passthrough` is directly passed to the SPI (Server Provider Interface) implementation that will create the client in the Open Id Connect Provider.
+        description: (Required) clientName for creating name of the client. `passthrough` is directly passed to the IDP Connect implementation that will create the client in the Open Id Connect Provider.
         required: true
         content:
           application/json:
@@ -41,9 +41,6 @@ paths:
                   clientName:
                     type: string
                     example: "example-user-pool-developer-1"
-                  clientMetadata:
-                    type: object
-                    example: {}
                   passthroughResponse:
                     type: object
                     example: {
@@ -54,14 +51,14 @@ paths:
                         ],
                       }
                     }
-          description: Successfully created client
+          description: Successfully created client.
         '500':
-          description: Unexpected error creating client
+          description: Unexpected error creating client.
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-      summary: Creates a client in the OpenId Connect Provider
+      summary: Creates a client in the OpenID Connect Provider.
       tags:
         - Clients
   /clients/{id}:
@@ -77,14 +74,14 @@ paths:
             type: string
         - in: query
           name: "passthrough"
-          description: Optionally include passthrough data as a json string
+          description: Optionally include passthrough data as a json string.
           schema:
             type: string
       responses:
         '204':
           description: Successfully deleted client.
         '404':
-          description: Client not found
+          description: Client not found.
           content:
             application/json:
               schema:
@@ -95,7 +92,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-      summary: Deletes a client in the OpenId Connect Provider
+      summary: Deletes a client in the OpenID Connect Provider.
       tags:
         - Clients
   /clients/{id}/scopes:
@@ -106,7 +103,7 @@ paths:
         - in: path
           name: "id"
           required: true
-          description: (Required) Client ID to add scope to
+          description: (Required) Client ID to add scope to.
           schema:
             type: string
       requestBody:
@@ -131,28 +128,28 @@ paths:
                   }
       responses:
         '204':
-          description: Successfully added scopes to client
+          description: Successfully added scopes to client.
         '404':
-          description: Client not found
+          description: Client not found.
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
         '500':
-          description: Unexpected error adding client scopes
+          description: Unexpected error adding client scopes.
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-      summary: Adds scope to a client in the OpenId Connect Provider
+      summary: Adds scope to a client in the OpenID Connect Provider
       tags:
         - Clients
   /scopes:
     post:
-      description: Creates scope in the Open Id Connect Provider for a given unique identifier. Different Identity Providers associate scopes with different entities. In AWS Congito the client scope would be created for a `ResourceServer` for a `UserPool`, in keycloak the client scope would be created for a `Realm`, in Okta a client scope would be created for a `Authorization Server` which is associated with a Okta `Application` via an `Access Policy`. In Auth0, a scope is created for a `ResourceServer` which is associated with your API via the API identifier.
+      description: Creates scope in the Open Id Connect Provider. Different Identity Providers associate scopes with different entities. In AWS Congito the client scope would be created for a `ResourceServer` for a `UserPool`, in keycloak the client scope would be created for a `Realm`, in Okta a client scope would be created for a `Authorization Server` which is associated with a Okta `Application` via an `Access Policy`. In Auth0, a scope is created for a `ResourceServer` which is associated with your API via the API identifier.
       operationId: CreateScope
       requestBody:
-        description: Create scope for a specific client.
+        description: Create scope for associated with your Open Id Connect clients.
         required: true
         content:
           application/json:
@@ -170,20 +167,20 @@ paths:
                   }
       responses:
         '201':
-          description: Successfully created scope
+          description: Successfully created scope.
         '409':
-          description: Scope already exists
+          description: Scope already exists.
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
         '500':
-          description: Unexpected error creating scope
+          description: Unexpected error creating scope.
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-      summary: Creates scope in the OpenId Connect Provider
+      summary: Creates scope in the OpenID Connect Provider. Then, you can add these scopes to the client ID for your Portal apps with the `PUT /client/{id}/scopes` API request
       tags:
         - Scopes
     delete:
@@ -198,14 +195,14 @@ paths:
             type: string
         - in: query
           name: "passthrough"
-          description: Optionally include passthrough data
+          description: Optionally include passthrough data.
           schema:
             type: string
       responses:
         '204':
           description: Successfully deleted scope.
         '404':
-          description: Scope not found
+          description: Scope not found.
           content:
             application/json:
               schema:
@@ -216,7 +213,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-      summary: Deletes scope in the OpenId Connect Provider
+      summary: Deletes scope in the OpenID Connect Provider.
       tags:
         - Scopes
 components:
@@ -240,10 +237,9 @@ components:
       properties:
         code:
           type: integer
-          example: "500"
         message:
           type: string
-          example: "Internal Server Error"
+          example: "Status Code Message"
         reason:
           type: string
-          example: "Bad Request"
+          example: "Error reason"
